mm-broadband-modem-mbim: ignore SIM related indications during SIM slot switch

Using pending_sim_slot_switch_action to ignore SIM slot update during modem shutdown

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/645